# SEC03A

./: .gitignore  README.md  pyproject.toml
FirstPrj/: db.sqlite3  manage.py
FirstPrj/FirstApp/: admin.py  forms.py  models.py  views.py
FirstPrj/FirstApp/migrations/: 0001_initial.py  0002_alter_seat_reserved.py  0003_alter_seat_user.py  0004_alter_seat_user.py  0005_auto_20240729_0234.py  0006_auto_20240729_0238.py  0007_auto_20240729_0241.py  0008_auto_20240729_0308.py  0009_seat_number.py  0010_alter_movie_name.py  0011_alter_seat_user.py
FirstPrj/FirstApp/static/: style.css
FirstPrj/FirstApp/templates/: base.html  login_logout_frame.html  past_reservations.html  register_form_frame.html  register_frame.html  reservation_result.html  reservations_frame.html  reserve_form_frame.html  seats_form_frame.html
FirstPrj/FirstPrj/: settings.py  urls.py  wsgi.py
