[tool.poetry]
name = "demo"
version = "0.1.0"
description = ""
authors = ["m5281021"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^5.0.6"

[tool.poetry.group.dev.dependencies]
Django = "^5.0.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
